=================== Release 1.0 2017-04-30 =====================
Description
    * First version of the App.
Functionalities
    * 
Changes
    * Version 1.0 Build 01 (2017/04/30)
        * Added support for showing if tomorrow is set or not in the project's table. (2017/04/12)
        * Improved support for the table caching system. (2017/04/12)
        * Added support for sorting projects by use (Default). (2017/04/11)
        * Added support for Fabric and Crashlytics. (2017/04/10)
        * Added support for pre-loading table cells for the *ViewProject's* view. This solves a glitch in the caching system. (2017/04/10)
        * Added support for a simple caching system for the *ViewProject's* view. (2017/04/09)
        * Re-added support to copy/duplicate tasks marked as NOT DONE to next day, but with the state of PENDING. (2017/04/07)
        * Corrected bug in SR computation. (2017/04/07)
        * Added support for custom table sliding menues. (2017/04/07)
        * Correction to the OSR computation and statistics. (2017/04/06)
        * Added support for GMT offsets wherever there is a date in the DB. (2017/04/06)
        * Mayor modifications to the way overlays are handled. Now they are added to the superview only when shown. And some other minor modifications. (2017/04/05)
        * Removed support to copy/duplicate tasks marked as NOT DONE to next day. (2017/04/05)
        * Added support to copy/duplicate tasks marked as NOT DONE to next day, but with the state of PENDING. (2017/04/05)
        * Corrected bug where tasks were not being migrated if added from the bucket list. (2017/04/04)
        * Added support for a spinner in controllers. (2017/04/04)
        * Corrected bug where notifications were not being re-scheduled when modifying times. Also corrected a minor bug with the computation of SR. (2017/04/04)
        * Added support to change a project's name. (2017/04/03)